Compiles on JDK8, JDK11 and JDK13, runs on JDK11 and JDK13