@@ -25,10 +25,16 @@
 
 package com.sun.tools.oldlets.javadoc.main;
 
+import java.util.LinkedHashMap;
+import java.util.Map;
+import java.util.StringTokenizer;
+
 import com.sun.tools.javac.code.Flags;
+import com.sun.tools.javac.main.Option;
+import com.sun.tools.javac.main.OptionHelper;
 import com.sun.tools.javac.util.ListBuffer;
 import com.sun.tools.javac.util.Options;
-import java.util.StringTokenizer;
+import java.util.Arrays;
 
 
 /**
@@ -45,42 +51,105 @@ public enum ToolOption {
     BOOTCLASSPATH("-bootclasspath", true) {
         @Override
         public void process(Helper helper, String arg) {
-            helper.setCompilerOpt(opt, arg);
+            helper.setFileManagerOpt(arg, "BOOT_CLASS_PATH", "BOOTCLASSPATH");
         }
     },
 
     CLASSPATH("-classpath", true) {
         @Override
         public void process(Helper helper, String arg) {
-            helper.setCompilerOpt(opt, arg);
+            helper.setFileManagerOpt(arg, "CLASS_PATH", "CLASSPATH");
         }
     },
 
     CP("-cp", true) {
         @Override
         public void process(Helper helper, String arg) {
-            helper.setCompilerOpt(opt, arg);
+            helper.setFileManagerOpt(arg, "CLASS_PATH", "CLASSPATH");
+        }
+    },
+
+    CLASS_PATH("--class-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(arg, "CLASS_PATH", "CLASSPATH");
         }
     },
 
     EXTDIRS("-extdirs", true) {
         @Override
         public void process(Helper helper, String arg) {
-            helper.setCompilerOpt(opt, arg);
+            helper.setFileManagerOpt(Option.EXTDIRS, arg);
         }
     },
 
     SOURCEPATH("-sourcepath", true) {
         @Override
         public void process(Helper helper, String arg) {
-            helper.setCompilerOpt(opt, arg);
+            helper.setFileManagerOpt(arg, "SOURCE_PATH", "SOURCEPATH");
+        }
+    },
+
+    SOURCE_PATH("--source-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(arg, "SOURCE_PATH", "SOURCEPATH");
         }
     },
 
     SYSCLASSPATH("-sysclasspath", true) {
         @Override
         public void process(Helper helper, String arg) {
-            helper.setCompilerOpt("-bootclasspath", arg);
+            helper.setFileManagerOpt(arg, "BOOT_CLASS_PATH", "BOOTCLASSPATH");
+        }
+    },
+
+    MODULE_SOURCE_PATH("--module-source-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(arg, "MODULE_SOURCE_PATH", null);
+        }
+    },
+
+    UPGRADE_MODULE_PATH("--upgrade-module-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(arg, "UPGRADE_MODULE_PATH", null);
+        }
+    },
+
+    SYSTEM_("--system", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(arg, "SYSTEM", null);
+        }
+    },
+
+    MODULE_PATH("--module-path", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(arg, "MODULE_PATH", null);
+        }
+    },
+
+    P("-p", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            helper.setFileManagerOpt(arg, "MODULE_PATH", null);
+        }
+    },
+
+    ADD_MODULES("--add-modules", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            processOption("ADD_MODULES", helper.getOptionHelper(), opt, arg);
+        }
+    },
+
+    LIMIT_MODULES("--limit-modules", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            processOption("LIMIT_MODULES", helper.getOptionHelper(), opt, arg);
         }
     },
 
@@ -88,6 +157,14 @@ public enum ToolOption {
         @Override
         public void process(Helper helper, String arg) {
             helper.encoding = arg;
+            helper.setCompilerOpt(opt, arg);
+            helper.setFileManagerOpt(Option.ENCODING, arg);
+        }
+    },
+
+    RELEASE("--release", true) {
+        @Override
+        public void process(Helper helper, String arg) {
             helper.setCompilerOpt(opt, arg);
         }
     },
@@ -110,6 +187,34 @@ public enum ToolOption {
         @Override
         public void process(Helper helper, String arg) {
             helper.setCompilerOpt(opt, arg);
+        }
+    },
+
+    ADD_READS("--add-reads", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            processOption("ADD_READS", helper.getOptionHelper(), opt, arg);
+        }
+    },
+
+    ADD_EXPORTS("--add-exports", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            processOption("ADD_EXPORTS", helper.getOptionHelper(), opt, arg);
+        }
+    },
+
+    PATCH_MODULE("--patch-module", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            processOption("PATCH_MODULE", helper.getOptionHelper(), opt, arg);
+        }
+    },
+
+    ADD_OPENS("--add-opens", true) {
+        @Override
+        public void process(Helper helper, String arg) {
+            processOption("ADD_OPENS", helper.getOptionHelper(), opt, arg);
         }
     },
 
@@ -266,13 +371,16 @@ public enum ToolOption {
 
     static abstract class Helper {
         /** List of decoded options. */
-        final ListBuffer<String[]> options = new ListBuffer<String[]>();
+        final ListBuffer<String[]> options = new ListBuffer<>();
 
         /** Selected packages, from -subpackages. */
-        final ListBuffer<String> subPackages = new ListBuffer<String>();
+        final ListBuffer<String> subPackages = new ListBuffer<>();
 
         /** Excluded packages, from -exclude. */
-        final ListBuffer<String> excludedPackages = new ListBuffer<String>();
+        final ListBuffer<String> excludedPackages = new ListBuffer<>();
+
+        // File manager options
+        final Map<Option, String> fileManagerOpts = new LinkedHashMap<>();
 
         /** javac options, set by various options. */
         Options compOpts; // = Options.instance(context)
@@ -305,8 +413,9 @@ public enum ToolOption {
         abstract void Xusage();
 
         abstract void usageError(String msg, Object... args);
+        abstract OptionHelper getOptionHelper();
 
-        protected void addToList(ListBuffer<String> list, String str){
+        void addToList(ListBuffer<String> list, String str){
             StringTokenizer st = new StringTokenizer(str, ":");
             String current;
             while(st.hasMoreTokens()){
@@ -315,18 +424,57 @@ public enum ToolOption {
             }
         }
 
-        protected void setFilter(long filterBits) {
+        void setFilter(long filterBits) {
             if (showAccess != null) {
                 usageError("main.incompatible.access.flags");
             }
             showAccess = new ModifierFilter(filterBits);
         }
 
-        private void setCompilerOpt(String opt, String arg) {
+        void setCompilerOpt(String opt, String arg) {
             if (compOpts.get(opt) != null) {
                 usageError("main.option.already.seen", opt);
             }
             compOpts.put(opt, arg);
         }
+
+        void setFileManagerOpt(Option opt, String arg) {
+            fileManagerOpts.put(opt, arg);
+        }
+
+        void setFileManagerOpt(String arg, String... altNames) {
+            final Option opt = findOption(altNames);
+            if (opt == null) {
+                return;
+            }
+            setFileManagerOpt(opt, arg);
+        }
+
+    }
+
+    private static void processOption(String optName, OptionHelper helper, String opt, String arg) {
+        try {
+            Option.valueOf(optName).process(helper, opt, arg);
+        } catch (RuntimeException ex) {
+            throw ex;
+        } catch (Exception ex) {
+            throw new IllegalArgumentException(ex);
+        }
+    }
+
+    static Option findOption(String... altNames) {
+        for (String optName : altNames) {
+            if (optName == null) {
+                return null;
+            }
+            final Option opt;
+            try {
+                opt = Option.valueOf(optName);
+            } catch (IllegalArgumentException ex) {
+                continue;
+            }
+            return opt;
+        }
+        throw new IllegalStateException("No option " + Arrays.toString(altNames) + " among " + Arrays.toString(Option.values()));
     }
 }
